ADD html, css and fetch req to movies API

--- a/index.html
+++ b/index.html
@@ -4,33 +4,59 @@
     <meta charset="”UTF-8″" />
     <meta name="viewport" content="width=device-width, initial-sacle=1.0" />
     <link rel="stylesheet" href="style.css" />
-    <title>Drink Water</title>
+    <title>Movie App</title>
   </head>
   <body>
-    <h1>Drink Water</h1>
-    <h3>Goal: 2 liters</h3>
+    <header>
+      <form id="form">
+        <input type="text" class="search" id="search" placeholder="Search" />
+      </form>
+    </header>
 
-    <div class="cup full">
-      <div class="remained" id="remained">
-        <span id="liters"></span>
-        <small>Remained</small>
+    <main id="main">
+      <div class="movie">
+        <img src="/unsplash.jpg" alt="" />
+        <div class="movie-info">
+          <h3>Title</h3>
+          <span class="green">9</span>
+        </div>
+        <div class="overview">
+          <h3>Overview</h3>
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Totam
+          adipisci a quisquam libero pariatur itaque vitae, ad beatae, ipsa
+          mollitia exercitationem velit maiores cupiditate obcaecati nobis rem
+          quis deserunt accusantium!
+        </div>
       </div>
-
-      <div class="percentage" id="percentage"></div>
-    </div>
-
-    <p class="text">Select how many glasses of water that you have drank:</p>
-
-    <div class="cups">
-      <div class="cup cup-small">250 ml</div>
-      <div class="cup cup-small">250 ml</div>
-      <div class="cup cup-small">250 ml</div>
-      <div class="cup cup-small">250 ml</div>
-      <div class="cup cup-small">250 ml</div>
-      <div class="cup cup-small">250 ml</div>
-      <div class="cup cup-small">250 ml</div>
-      <div class="cup cup-small">250 ml</div>
-    </div>
+      <div class="movie">
+        <img src="/unsplash.jpg" alt="" />
+        <div class="movie-info">
+          <h3>Title</h3>
+          <span class="green">9</span>
+        </div>
+        <div class="overview">
+          <h3>Overview</h3>
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Totam
+          adipisci a quisquam libero pariatur itaque vitae, ad beatae, ipsa
+          mollitia exercitationem velit maiores cupiditate obcaecati nobis rem
+          quis deserunt accusantium!
+        </div>
+      </div>
+      <div class="movie">
+        <img src="/unsplash.jpg" alt="" />
+        <div class="movie-info">
+          <h3>Title</h3>
+          <span class="green">9</span>
+        </div>
+        <div class="overview">
+          <h3>Overview</h3>
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Totam
+          adipisci a quisquam libero pariatur itaque vitae, ad beatae, ipsa
+          mollitia exercitationem velit maiores cupiditate obcaecati nobis rem
+          quis deserunt accusantium!
+        </div>
+      </div>
+    </main>
     <script src="script.js"></script>
   </body>
 </html>
