ADD movies to the DOM with JS

--- a/index.html
+++ b/index.html
@@ -13,50 +13,7 @@
       </form>
     </header>
 
-    <main id="main">
-      <div class="movie">
-        <img src="/unsplash.jpg" alt="" />
-        <div class="movie-info">
-          <h3>Title</h3>
-          <span class="green">9</span>
-        </div>
-        <div class="overview">
-          <h3>Overview</h3>
-          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Totam
-          adipisci a quisquam libero pariatur itaque vitae, ad beatae, ipsa
-          mollitia exercitationem velit maiores cupiditate obcaecati nobis rem
-          quis deserunt accusantium!
-        </div>
-      </div>
-      <div class="movie">
-        <img src="/unsplash.jpg" alt="" />
-        <div class="movie-info">
-          <h3>Title</h3>
-          <span class="green">9</span>
-        </div>
-        <div class="overview">
-          <h3>Overview</h3>
-          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Totam
-          adipisci a quisquam libero pariatur itaque vitae, ad beatae, ipsa
-          mollitia exercitationem velit maiores cupiditate obcaecati nobis rem
-          quis deserunt accusantium!
-        </div>
-      </div>
-      <div class="movie">
-        <img src="/unsplash.jpg" alt="" />
-        <div class="movie-info">
-          <h3>Title</h3>
-          <span class="green">9</span>
-        </div>
-        <div class="overview">
-          <h3>Overview</h3>
-          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Totam
-          adipisci a quisquam libero pariatur itaque vitae, ad beatae, ipsa
-          mollitia exercitationem velit maiores cupiditate obcaecati nobis rem
-          quis deserunt accusantium!
-        </div>
-      </div>
-    </main>
+    <main id="main"></main>
     <script src="script.js"></script>
   </body>
 </html>
